# ros2-essentials

./: .gitignore  .gitmodules  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  sitemap.xml
aloha_ws/src/interbotix_ros_core/interbotix_ros_xseries/interbotix_xs_driver/: .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.repos  package.xml
deeplab_ws/src/deeplab/: CMakeLists.txt  package.xml
deeplab_ws/src/deeplab/deeplab/: model.py  ros_node.py
deeplab_ws/src/deeplab/launch/: deeplab_launch.py
deeplab_ws/src/deeplab/scripts/: inference.py
delto_gripper_ws/src/DELTO_M_ROS2/dg3f_m_driver/: CMakeLists.txt  README.md  dg3f_m_driver.xml  package.xml
delto_gripper_ws/src/DELTO_M_ROS2/dg3f_m_driver/config/: dg3f_m_controller.yaml
delto_gripper_ws/src/DELTO_M_ROS2/dg3f_m_driver/launch/: dg3f_m_driver.launch.py
delto_gripper_ws/src/DELTO_M_ROS2/dg3f_m_driver/script/: dg3f_m_operator_test.py  dg3f_m_test.py
delto_gripper_ws/src/DELTO_M_ROS2/dg3f_m_driver/src/: delto_developer_TCP.cpp  dg3f_m_operator_driver.cpp  dg3f_m_operator_test.cpp  dg3f_m_test.cpp  system_interface.cpp
delto_gripper_ws/src/DELTO_M_ROS2/dg3f_m_driver/urdf/: dg3f_m_ros2_control.xacro
delto_gripper_ws/src/DELTO_M_ROS2/dg3f_m_gz/: CMakeLists.txt  README.md  package.xml
delto_gripper_ws/src/DELTO_M_ROS2/dg3f_m_gz/config/: dg3f_m_gz_controller.yaml
delto_gripper_ws/src/DELTO_M_ROS2/dg3f_m_gz/launch/: dg3f_m_gz.launch.py
delto_gripper_ws/src/DELTO_M_ROS2/dg3f_m_gz/script/: dg3f_m_gz_test.py
delto_gripper_ws/src/DELTO_M_ROS2/dg3f_m_gz/src/: dg3f_m_gz_test.cpp
delto_gripper_ws/src/DELTO_M_ROS2/dg3f_m_gz/urdf/: dg3f_m_gz.xacro
delto_gripper_ws/src/DELTO_M_ROS2/dg5f_driver/: CMakeLists.txt  README.md  dg5f_driver.xml  package.xml
delto_gripper_ws/src/DELTO_M_ROS2/dg5f_driver/config/: dg5f_left_controller.yaml  dg5f_right_controller.yaml
delto_gripper_ws/src/DELTO_M_ROS2/dg5f_driver/launch/: dg5f_left_driver.launch.py  dg5f_right_driver.launch.py
delto_gripper_ws/src/DELTO_M_ROS2/dg5f_driver/script/: dg5f_left_test.py  dg5f_right_test.py
delto_gripper_ws/src/DELTO_M_ROS2/dg5f_driver/src/: delto_developer_TCP.cpp  dg5f_operator_driver.cpp  system_interface.cpp
delto_gripper_ws/src/DELTO_M_ROS2/dg5f_driver/urdf/: dg5f_left_ros2_control.xacro  dg5f_right_ros2_control.xacro
delto_gripper_ws/src/DELTO_M_ROS2/dg5f_gz/: CMakeLists.txt  README.md  package.xml
delto_gripper_ws/src/DELTO_M_ROS2/dg5f_gz/config/: dg5f_both_gz_controller.yaml  dg5f_left_gz_controller.yaml  dg5f_right_gz_controller.yaml  gui.config  world.sdf
delto_gripper_ws/src/DELTO_M_ROS2/dg5f_gz/launch/: dg5f_both_gz.launch.py  dg5f_left_gz.launch.py  dg5f_right_gz.launch.py
delto_gripper_ws/src/DELTO_M_ROS2/dg5f_gz/script/: dg5f_both_gz_test.py  dg5f_left_gz_test.py
delto_gripper_ws/src/DELTO_M_ROS2/dg5f_gz/src/: dg5f_both_gz_test.cpp  dg5f_left_gz_test.cpp  dg5f_right_gz_test.cpp
delto_gripper_ws/src/DELTO_M_ROS2/dg5f_gz/urdf/: dg5f_both_gz.xacro  dg5f_left_gz.xacro  dg5f_right_gz.xacro
delto_gripper_ws/src/DELTO_M_ROS2/dg_description/: README.md  package.xml  setup.cfg  setup.py
delto_gripper_ws/src/DELTO_M_ROS2/dg_description/config/: dg3f_m_display.rviz  dg5f_left_display.rviz  dg5f_right_display.rviz
delto_gripper_ws/src/DELTO_M_ROS2/dg_description/launch/: dg3f_m_display.launch.py  dg5f_left_display.launch.py  dg5f_right_display.launch.py
delto_gripper_ws/src/DELTO_M_ROS2/dg_description/urdf/: dg3f_m.urdf  dg3f_m.xacro  dg5f_left.urdf  dg5f_left.xacro  dg5f_right.urdf  dg5f_right.xacro
delto_gripper_ws/src/DELTO_M_ROS2/dg_isaacsim/: CMakeLists.txt  README.md  package.xml
delto_gripper_ws/src/DELTO_M_ROS2/dg_isaacsim/config/: dg5f_right_isaacsim_controller.yaml
delto_gripper_ws/src/DELTO_M_ROS2/dg_isaacsim/dg3f_m/: dg3f_m.usd
delto_gripper_ws/src/DELTO_M_ROS2/dg_isaacsim/dg5f_left/: dg5f_left.usd
gazebo_world_ws/src/clearpath_playpen/: CMakeLists.txt  package.xml
gazebo_world_ws/src/clearpath_playpen/worlds/: clearpath_playpen.world
go2_ws/src/go2_description/: CMakeLists.txt  package.xml
go2_ws/src/go2_description/launch/: go2_description.launch.py
go2_ws/src/go2_description/rviz/: robot_description.rviz
go2_ws/src/go2_description/xacro/: const.xacro  leg.xacro  robot.xacro
go2_ws/src/go2_navigation/: CMakeLists.txt  package.xml
go2_ws/src/go2_navigation/config/: nav2_params.yaml
go2_ws/src/go2_navigation/launch/: go2_navigation.launch.py
go2_ws/src/go2_navigation/rviz/: go2_navigation.rviz
go2_ws/src/go2_navigation/scripts/: fake_map_publisher.py  odom_tf_publisher.py
husky_ws/src/husky/LMS1xx/: CMakeLists.txt
husky_ws/src/husky/LMS1xx/urdf/: sick_lms1xx.urdf.xacro
stretch3_ws/src/stretch3_navigation/: CMakeLists.txt  package.xml
stretch3_ws/src/stretch3_navigation/config/: cartographer.lua  nav2_params.yaml  rtabmap.yaml
stretch3_ws/src/stretch3_navigation/launch/: cartographer.launch.py  navigation.launch.py  rtabmap.launch.py  rviz.launch.py
stretch3_ws/src/stretch3_navigation/rviz/: stretch3.rviz
ur5_ws/src/Universal_Robots_ROS2_Description/: .pre-commit-config.yaml  CHANGELOG.rst  README.md  ci_status.md  package.xml
ur5_ws/src/Universal_Robots_ROS2_Description/launch/: view_ur.launch.py
ur5_ws/src/Universal_Robots_ROS2_Description/test/: test_ur_urdf_xacro.py
ur5_ws/src/Universal_Robots_ROS2_Description/urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro
ur5_ws/src/ur_onrobot_rg2_ros/onrobot_rg2/: CMakeLists.txt  onrobot_rg2.repos  package.xml
ur5_ws/src/ur_onrobot_rg2_ros/onrobot_rg2_description/: CMakeLists.txt  package.xml
ur5_ws/src/ur_onrobot_rg2_ros/onrobot_rg2_driver/: CMakeLists.txt  package.xml
ur5_ws/src/ur_onrobot_rg2_ros/onrobot_rg2_gazebo/: CMakeLists.txt  package.xml
ur5_ws/src/ur_pose_tracking/: CMakeLists.txt  package.xml
ur5_ws/src/ur_pose_tracking/config/: default.yaml
ur5_ws/src/ur_pose_tracking/launch/: ur_pose_tracking.launch.py
ur5_ws/src/ur_pose_tracking/scripts/: main.py
ur5_ws/src/ur_pose_tracking/ur_pose_tracking/: pid_controller.py  ur_pose_tracking.py
(+1042 files in other folders)
