<?xml version="1.0"?>
<package format="3">
  <name>go2_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for go2_description</p>
    <p>This package contains configuration data, 3D models and launch files
for go2_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>