<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>dg_description</name>
  <version>0.0.1</version>
<description>The Delto-Gripper M description package</description>
  <maintainer email="khc@tesollo.com">hongcheol</maintainer>
  <license>BBSD-3-Clause</license>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
