<?xml version="1.0"?>
<package format="3">
  <name>onrobot_rg2_description</name>
  <version>0.0.1</version>

  <description>Onrobot RG2 gripper description files</description>
  <license>Apache License 2.0</license>

  <author email="pawel.kowalski@husarion.com">Pawel Kowalski</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/ur_onrobot_rg2_ros</url>
  <url type="bugtracker">https://github.com/husarion/ur_onrobot_rg2_ros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>