<?xml version="1.0"?>
<package format="3">
  <name>onrobot_rg2_gazebo</name>
  <version>0.0.1</version>

  <description>Onrobot RG2 gripper gazebo launch files</description>
  <license>Apache License 2.0</license>

  <author email="pawel.kowalski@husarion.com">Pawel Kowalski</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/ur_onrobot_rg2_ros</url>
  <url type="bugtracker">https://github.com/husarion/ur_onrobot_rg2_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>

</package>