<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>husky_navigation</name>
    <version>0.0.0</version>
    <description>Use Husky to navigation</description>
    <maintainer email="yuzhong1214@gmail.com">YuZhong Chen</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>nav2_common</build_depend>

    <depend>gazebo_ros_pkgs</depend>
    <depend>tf2</depend>

    <exec_depend>rviz2</exec_depend>
    <exec_depend>robot_localization</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>navigation2</exec_depend>
    <exec_depend>nav2_common</exec_depend>
    <exec_depend>nav2_bringup</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>
    <exec_depend>imu_tools</exec_depend>
    <exec_depend>husky_description</exec_depend>
    <exec_depend>husky_gazebo</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>